<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/send"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_externally"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:showAsAction="never" />
</menu>