<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_note"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_receive"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/receive_notes"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        android:showAsAction="never" />
</menu>